[package]
name = "hyperloglockless"
version = "0.3.1"
edition = "2021"
rust-version = "1.70.0"
authors = ["tomtomwombat"]
description = "High-performance HyperLogLog with bias correction and full concurrency support."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tomtomwombat/hyperloglockless/"
repository = "https://github.com/tomtomwombat/hyperloglockless/"
keywords = ["hyperloglog", "hyperloglogplus", "probabilistic", "cardinality", "no_std"]
categories = ["data-structures", "caching", "algorithms"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std", "rand"]
std = []
loom = ["dep:loom"]
rand = ["dep:rand"]
serde = ["dep:serde", "siphasher/serde_std"]

[dependencies]
getrandom = "0.3"
loom = { version = "0.7.2", optional = true }
rand = { version = "0.9.0", optional = true }
serde = { version = "1.0.203", features = ["derive"], optional = true }
siphasher = "1.0.0"
libm = "0.2"

[dev-dependencies]
ahash = "0.8.12"
serde_cbor = "0.11.2"